feat: [UX1] - Endpoint de listagem de papéis
